# tooro-editor

./: BUILDING.md  CHANGELOG.md  Cargo.toml  README.md  build-linux-appimage.sh  build-mac-bundle.sh
.cargo/: config
.github/workflows/: build_linux.yml  build_macos_arm.yml  build_windows.yml
src/: main.rs  messages.rs  midi.rs  params.rs  style.rs
src/elements/: lfo_phase_list.rs  lfo_shape_list.rs  mod.rs  wavetable_list.rs
src/midi/: cc.rs  mod.rs  sysex.rs
src/sections/: amp.rs  arp.rs  enva.rs  envf.rs  extra.rs  filter.rs  lfo1.rs  lfo2.rs  misc.rs  osc1.rs  osc2.rs  shaper.rs
src/ui/: mod.rs  style.rs
src/ui/elements/: arp_grid_list.rs  arp_mode_list.rs  checkbox.rs  env_trigger_list.rs  fx_mode_list.rs  lfo_phase_list.rs  lfo_shape_list.rs  midi_channel_list.rs  mod.rs  mod_target_list.rs  part_list.rs  shaper_mode_list.rs  slider.rs  slider_widget.rs  wavetable_list.rs
src/ui/manager/: mod.rs
src/ui/multi/: fx.rs  midi.rs  mixer.rs  mod.rs
src/ui/sound/: amp.rs  arp.rs  enva.rs  envf.rs  extra.rs  filter.rs  lfo1.rs  lfo2.rs  misc.rs  mod.rs  modulation.rs  osc1.rs  osc2.rs  shaper.rs
tools/: mac_bundle_post_build.py  tooro-editor.desktop
wix/: License.rtf  main.wxs
