[package]
name = "tooro-editor"
version = "1.1.0"
authors = ["Oliver Rockstedt <info@sourcebox.de>"]
edition = "2021"
rust-version = "1.59"
description = "Editor for the Fred's Lab Töörö hardware synthesizer"
repository = "https://github.com/sourcebox/tooro-editor"
license = "MIT"
keywords = ["midi", "synthesizer"]

[dependencies]
iced = { version = "0.6", default-features = false, features = ["tokio", "glow"]}
iced_native = "0.7"
iced_style = "0.5"
midir = "0.8"
log = { version="0.4", features = ["max_level_debug", "release_max_level_warn"] }
simple_logger = "4.0"
num-traits = "0.2"
tinyfiledialogs = "3.9"

[profile.release]
lto = true
strip = true

[package.metadata.bundle]
name = "Töörö Editor"
identifier = "de.sourcebox.tooro-editor"
osx_minimum_system_version = "10.11"
icon = ["icons/icon_32x32.png", "icons/icon_128x128.png", "icons/icon_256x256.png"]
